# AppStore

./: .gitignore  CMakeLists.txt  README.md  apps.json  config.json  main.cpp  mainwindow.cpp  mainwindow.h  rs.qrc  ui.cpp
component/: app.cpp  app.h  customlineedit.cpp  download_card.cpp  download_card.h  pathselectedit.cpp  pathselectedit.h  settingdialog.cpp  settingdialog.h
domain/: app_info.cpp  app_info.h  config.cpp  config.h
framelesswindow/: framelesswindow.mm
utils/: config_utils.cpp  config_utils.h  font_builder.h  http_utils.cpp  http_utils.h  layout_utils.cpp  layout_utils.h  qjson_utils.cpp  qjson_utils.h  string_utils.cpp  string_utils.h
